Added page styling

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -1,15 +1,23 @@
-/* Example */
-@base: #f938ab;
+@background: #016003;
+@fontColour: #ffffff;
 
-.box-shadow(@style, @c) when (iscolor(@c)) {
-  -webkit-box-shadow: @style @c;
-  box-shadow:         @style @c;
+body {
+  color: @fontColour;
+  background-color: @background;
 }
-.box-shadow(@style, @alpha: 50%) when (isnumber(@alpha)) {
-  .box-shadow(@style, rgba(0, 0, 0, @alpha));
+
+canvas {
+  margin: 0 auto;
 }
-.box {
-  color: saturate(@base, 5%);
-  border-color: lighten(@base, 30%);
-  div { .box-shadow(0 0 5px, 30%) }
+
+.header {
+  text-align: center;
+}
+
+.footer {
+  text-align: center;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  border-top: 1px solid @fontColour;
 }
