GWF proper config

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -4,6 +4,19 @@
 body {
   color: @fontColour;
   background-color: @background;
+
+  @font-face {
+    font-family: 'bree';
+    src: url('fonts/bree-seriff/breeserif-regular-webfont.eot');
+    src: url('fonts/bree-seriff/breeserif-regular-webfont.eot?#iefix') format('embedded-opentype'),
+    url('fonts/bree-seriff/breeserif-regular-webfont.woff2') format('woff2'),
+    url('fonts/bree-seriff/breeserif-regular-webfont.woff') format('woff'),
+    url('fonts/bree-seriff/breeserif-regular-webfont.ttf') format('truetype'),
+    url('fonts/bree-seriff/breeserif-regular-webfont.svg#bree_serifregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+  }
+
 }
 
 canvas {
@@ -12,6 +25,7 @@ canvas {
 
 .header {
   text-align: center;
+  font-family: bree;
 }
 
 .footer {
