Added proper fonts path

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -7,12 +7,12 @@ body {
 
   @font-face {
     font-family: 'bree';
-    src: url('fonts/bree-seriff/breeserif-regular-webfont.eot');
-    src: url('fonts/bree-seriff/breeserif-regular-webfont.eot?#iefix') format('embedded-opentype'),
-    url('fonts/bree-seriff/breeserif-regular-webfont.woff2') format('woff2'),
-    url('fonts/bree-seriff/breeserif-regular-webfont.woff') format('woff'),
-    url('fonts/bree-seriff/breeserif-regular-webfont.ttf') format('truetype'),
-    url('fonts/bree-seriff/breeserif-regular-webfont.svg#bree_serifregular') format('svg');
+    src: url('../assets/fonts/bree-seriff/breeserif-regular-webfont.eot');
+    src: url('../assets/fonts/bree-seriff/breeserif-regular-webfont.eot?#iefix') format('embedded-opentype'),
+    url('../assets/fonts/bree-seriff/breeserif-regular-webfont.woff2') format('woff2'),
+    url('../assets/fonts/bree-seriff/breeserif-regular-webfont.woff') format('woff'),
+    url('../assets/fonts/bree-seriff/breeserif-regular-webfont.ttf') format('truetype'),
+    url('../assets/fonts/bree-seriff/breeserif-regular-webfont.svg#bree_serifregular') format('svg');
     font-weight: normal;
     font-style: normal;
   }
